# cs2-minneapolis-zoning

./: .gitignore  METHODOLOGY.md  README.es.md  README.md  arborescence.html  arborescence_clean.txt
analysis_zoning_data/: datasets.csv  groups.csv  interesting_values.csv  property_keys.csv  property_values.csv  summary.txt
analysis_zoning_data/clipped/: bbox_manifest.json  clip_report.csv  commercial.geojson  industrial.geojson  office.geojson  parking.geojson  residential.geojson  retail.geojson  zoning_polygons.geojson
analysis_zoning_data/exports/: commercial.geojson  industrial.geojson  office.geojson  parking.geojson  residential.geojson  retail.geojson  zoning_polygons.geojson
data/: sample_output.js
docs/: adapting-to-other-cities.md  bbox-mcp-server.md  cs2-zone-reference.md  github-publishing.md  reddit_posts.md
src/: classifiers.py  cs2_zones.py  extract_zoning.py  extract_zoning.py.before-args-fix  extract_zoning.py.before-official-exports-pack  extract_zoning.py.before-split-layers  overpass_client.py  pyproject.toml
src/legacy/: descargar_zonificacion.js
tools/: export_cs2_pngs.py  export_terrain_rgb_png.py  validate_png_contract.py  write_cs2_bundle_manifest.py
visualizer/: datos_zonificacion.js  index.html  index.html.before-manifest-fix
visualizer/js/: app.js  config.js  config.js.before-water-layers  cs2-map-helper.js  cs2-map-helper.js.before-manifest-fix  cs2-overlay-controller.js  data-adapter.js  location-navigator.js  map-controller.js  pack-loader.js  pack-loader.js.before-water-layers  panel-controller.js  stats.js
(+11 files in other folders)
