[project]
name = "cs2-minneapolis-zoning"
version = "1.0.0"
description = "GIS pipeline: extract OpenStreetMap zoning data for Cities Skylines 2"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "tqdm>=4.66.0",
]

[project.scripts]
extract-zoning = "extract_zoning:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
